--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    registerWithEureka: true
+    registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
